--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "^1.2.7",
-    "@types/jsonwebtoken": "^9.0.9"
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^24.0.15"
   },
   "peerDependencies": {
     "typescript": "^5"
